--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Spring Configuration
 spring.data.mongodb.auto-index-creation=false
 #Environment Variables
-spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.uri=${mongodb+srv://AndresDavila:churrias123@cluster0.tmgx3.mongodb.net/myFirstDatabase?}
 #TODO 1. create and environment variable named SECRET with a secure long string and then uncomment this environment variable
-#app.secret=${SECRET}
+app.secret=${SECRET}
