--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,11 @@ repositories {
 }
 
 dependencies {
-  implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
-  implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.5.4'
+  implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+  implementation 'org.springframework.boot:spring-boot-starter-security'
+  implementation 'org.springframework.security:spring-security-crypto'
+  implementation 'io.jsonwebtoken:jjwt:0.9.1'
   testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
 }
 
